--- a/index.html
+++ b/index.html
@@ -13,6 +13,36 @@
     <div class="products" style="padding-right: 200px">Products</div>
     <div class="product-details">Detail<button class="btn_buy">Buy</button></div>
 </div>
+
+<div id="orderForm">
+    <button id="buyButton">Купити</button>
+    <h2>Оформлення замовлення</h2>
+    <form>
+        <label for="name">ПІБ покупця:</label>
+        <input type="text" id="name" required>
+        <label for="city">Місто:</label>
+        <select id="city" required>
+            <option value=""></option>
+            <option value="Київ">Київ</option>
+            <option value="Львів">Львів</option>
+            <option value="Одеса">Одеса</option>
+        </select>
+        <label for="post">Склад Нової пошти:</label>
+        <input type="text" id="post" required>
+        <label for="payment">Спосіб оплати:</label>
+        <select id="payment" required>
+            <option value=""></option>
+            <option value="післяплата">післяплата</option>
+            <option value="банківська карта">оплата банківської карти</option>
+        </select>
+        <label for="quantity">Кількість товару:</label>
+        <input type="number" id="quantity" required>
+        <label for="comment">Коментар до замовлення:</label>
+        <textarea id="comment"></textarea>
+        <button type="submit" id="confirmOrder">Підтвердити замовлення</button>
+    </form>
+</div>
+<div id="orderInfo"></div>
 <script src="main.js"></script>
 </body>
 </html>
