--- a/index.html
+++ b/index.html
@@ -19,26 +19,27 @@
     <h2>Оформлення замовлення</h2>
     <form>
         <label for="name">ПІБ покупця:</label>
-        <input type="text" id="name" required>
+        <input type="text" id="name" required><br><br>
         <label for="city">Місто:</label>
         <select id="city" required>
             <option value=""></option>
             <option value="Київ">Київ</option>
             <option value="Львів">Львів</option>
+            <option value="Харків">Харків</option>
             <option value="Одеса">Одеса</option>
-        </select>
+        </select><br><br>
         <label for="post">Склад Нової пошти:</label>
-        <input type="text" id="post" required>
+        <input type="text" id="post" required><br><br>
         <label for="payment">Спосіб оплати:</label>
         <select id="payment" required>
             <option value=""></option>
             <option value="післяплата">післяплата</option>
             <option value="банківська карта">оплата банківської карти</option>
-        </select>
+        </select><br><br>
         <label for="quantity">Кількість товару:</label>
-        <input type="number" id="quantity" required>
-        <label for="comment">Коментар до замовлення:</label>
-        <textarea id="comment"></textarea>
+        <input type="number" id="quantity" required><br><br>
+        <label for="comment">Коментар до замовлення:</label><br>
+        <textarea id="comment" rows="6" cols ="50"></textarea><br><br>
         <button type="submit" id="confirmOrder">Підтвердити замовлення</button>
     </form>
 </div>
