--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <select id="payment" required>
             <option value=""></option>
             <option value="післяплата">післяплата</option>
-            <option value="банківська карта">оплата банківської карти</option>
+            <option value="оплата банківської карти">оплата банківської карти</option>
         </select><br><br>
         <label for="quantity">Кількість товару:</label>
         <input type="number" id="quantity" required><br><br>
